example/secondfile/objects/Rate_Tier_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Display_Name__c</fullName>
        <label>Bill Display Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_IDD__c</fullName>
        <formula>HYPERLINK(&quot;/apex/RateTierDeterminantDisplay?Id=&quot;&amp;Id, Determinant_Set_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Determinant Set ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_ID__c</fullName>
        <label>Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Determinant_Set_ID__c</fullName>
        <label>Fixed Determinant Set ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Level__c</fullName>
        <label>High Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRateSyncSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRateSyncSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_Level__c</fullName>
        <label>Low Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHI_Id_onTier__c</fullName>
        <formula>Rate_PBI__r.Rate_PHI__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PHI Id onTier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Previous Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_PBI__c</fullName>
        <label>Rate-PBI</label>
        <referenceTo>Rate_PBI__c</referenceTo>
        <relationshipLabel>Rate-Tier Rates</relationshipLabel>
        <relationshipName>Rate_Tier_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Sync_Error_Description__c</fullName>
        <label>Rate Sync Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sync_Status__c</fullName>
        <formula>IF(  Ready_for_Sync__c  = true,TEXT(Rate_PBI__r.Rate_PHI__r.Rate_Sync_Status__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retrigger_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retrigger Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surcharge_Amount__c</fullName>
        <label>Surcharge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Amount__c</fullName>
        <label>Temp Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Amount_to_copy__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Test Amount to copy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isTierStatusFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTierStatusFailed</label>
        <type>Checkbox</type>
    </fields>
    <label>Rate -Tier Rates</label>
    <nameField>
        <displayFormat>RateTier-{000000}</displayFormat>
        <label>Rate - Tier Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate-Tier Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>